# Visiona

./: .env.example  .evn,example  .gitignore  README.md  agent_ideas.md  main.py  pyproject.toml  requirements.txt  task.md
agents/: orchestrator.py
agents/tools/: vision_tools.py
audio/: alert.py  speech.py  test_speech_preservation.py  test_speech_timing.py  voice_input.py
core/: config.py  detection.py  memory.py  priority_queue.py  recognition.py
docker/: Dockerfile  docker-compose.yml
engines/: __init__.py  alert.py  depth.py  grouping.py  kalman.py  logger.py  memory.py  mono_depth.py  navigator.py  speech.py  speed.py  tracker.py  ttc.py  vision.py  voice_input.py
kinematics/: heatmap.py  kalman.py  speed.py  ttc.py
models/: __init__.py  detection.py  priority_queue.py
perception/: egomotion.py  mono_depth.py  tracker.py  vision.py
services/: google_maps.py  vector_db.py
